# surrealdb-poetry-pytest-example

./: .gitignore  DEVNOTE.md  PROMPTS.md  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
tests/: conftest.py  test_connection.py  test_fields.py  test_indices.py  test_records.py  test_schema.py
